# minipool

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml  ghrc-publish.yaml
src/: main.rs  metrics.rs
