[package]
name = "minipool"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bitcoincore-rpc = "0.19"
clap = { version = "4.4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
